--- a/weekday/src/main/resources/application.properties
+++ b/weekday/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.resources.static-locations=classpath:/
+# Netty
+netty.port=8888
+netty.mtu=1024
+netty.maxContentLength=8192
