--- a/weekday/pom.xml
+++ b/weekday/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>spring-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
         <!-- test for stomp WebSocket -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
